--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
           <a href=""><i class="fa-solid fa-hand-holding-droplet"></i></a>
           <h1>Acuas</h1>
         </div>
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <ul>
           <li><a href="index.html " class="one-class">Home</a></li>
           <li><a href="about.html" class="one-class">About Us</a></li>
