--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span></span>
           <span></span>
         </div>
-        <ul>
+        <ul class="mobile-dropdown">
           <li><a href="index.html " class="one-class">Home</a></li>
           <li><a href="about.html" class="one-class">About Us</a></li>
           <li><a href="service.html" class="one-class">Service</a></li>
